objects/Quote_Request_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Proposed_Funding_Type_multi__c</fullName>
        <label>Proposed Funding Type (No use)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>COST PLUS</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
                <value>
                    <fullName>Minimum Premium</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>NDSS</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>Prospective Premium</fullName>
                </value>
                <value>
                    <fullName>RSR</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Rx_Formulary__c</fullName>
        <label>Proposed Rx Formulary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Performance Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Rx_Network__c</fullName>
        <label>Proposed Rx Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Preferred/Value</fullName>
                </value>
                <value>
                    <fullName>Traditional Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Rx_Pricing__c</fullName>
        <label>Proposed Rx Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Passthrough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_contribution_same_as_current__c</fullName>
        <label>Proposed contribution same as current?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteToQRDate__c</fullName>
        <label>QuoteToQRDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteToQRStatus__c</fullName>
        <label>QuoteToQRStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Request</relationshipLabel>
        <relationshipName>Quote_Request_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Request_Name__c</fullName>
        <label>Quote Request Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Structure__c</fullName>
        <label>Rate Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
                <value>
                    <fullName>5 Tier</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Version_Received__c</fullName>
        <formula>CASE( Status__c ,&apos;Received Initial&apos;, &apos;initial&apos;,&apos;Received Final&apos;, &apos;final&apos;,&apos;&apos;)</formula>
        <label>Rate Version Received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rates_Effective_for_Months__c</fullName>
        <label>Rates Effective for (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_DateTime__c</fullName>
        <label>Received DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_From_Marketing__c</fullName>
        <label>Received From Marketing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reinsurer__c</fullName>
        <label>Reinsurer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_To_Marketing__c</fullName>
        <label>Release To Marketing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <description>Required when Get Rate button is clicked to make callout to Heron.</description>
        <label>Quote Req Desc</label>
        <length>53</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Effective_Date__c</fullName>
        <label>Request Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirees__c</fullName>
        <label>Retirees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Data_Comment__c</fullName>
        <inlineHelpText>Comment for last question if answered Yes.</inlineHelpText>
        <label>Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_Current_Participation__c</fullName>
        <label>STD Current Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STD_days__c</fullName>
        <label>STD(days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Sales</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Up Sales</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <color>#FF9966</color>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Received Initial</fullName>
                </value>
                <value>
                    <fullName>Received Final</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Declined to Quote</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stoploss_Attachment_Points_Aggregate__c</fullName>
        <label>Stoploss Attachment Points – Aggregate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stoploss_Attachment_Points_Individual__c</fullName>
        <label>Stoploss Attachment Points – Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subject_to_ERISA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subject to ERISA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_Time__c</fullName>
        <label>Submitted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Covered__c</fullName>
        <label>Total Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Eligible__c</fullName>
        <label>Total Eligible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_for_Dental__c</fullName>
        <label>Total Eligible for Dental</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_for_Health__c</fullName>
        <label>Total Eligible for Health</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_on_Payroll__c</fullName>
        <label>Total on Payroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trend_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trend Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UW Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Underwriter_Name_frm_owner__c</fullName>
        <formula>IF( !ISBlank( TEXT(Underwriter_Queue__c )),TEXT(Underwriter_Queue__c), Underwriter__r.FirstName+&apos; &apos;+Underwriter__r.LastName   )</formula>
        <label>Underwriter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_Queue__c</fullName>
        <description>capture the underwriting queue name as it is given from UI</description>
        <label>Underwriter Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Underwriting_25_000_Exchange_Only_RFP</fullName>
                    <label>Underwriting:25,000+ &amp; Exchange Only RFP</label>
                </value>
                <value>
                    <fullName>Underwriting_5_000_25_000</fullName>
                    <label>Underwriting: 5,000 – 25,000</label>
                </value>
                <value>
                    <fullName>Underwriting_IL_LG_151_5_000</fullName>
                    <label>Underwriting: IL LG 151 - 5,000</label>
                </value>
                <value>
                    <fullName>Underwriting_IL_NA_151_5_000</fullName>
                    <label>Underwriting: IL NA 151 - 5,000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Underwriter</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Request_Summarys5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Underwriting_Due_Date__c</fullName>
        <label>Underwriting Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiting_For_Information_Type__c</fullName>
        <label>Waiting For Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Missing or inconsistent claims information</fullName>
                </value>
                <value>
                    <fullName>Large claim information</fullName>
                </value>
                <value>
                    <fullName>Eligibility clarification</fullName>
                </value>
                <value>
                    <fullName>Census information</fullName>
                </value>
                <value>
                    <fullName>Questions on proposed benefits</fullName>
                </value>
                <value>
                    <fullName>Current or prior carrier information missing</fullName>
                </value>
                <value>
                    <fullName>Situs issues</fullName>
                </value>
                <value>
                    <fullName>Information on RFP form doesn&apos;t match attachments</fullName>
                </value>
                <value>
                    <fullName>Other missing information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_Period__c</fullName>
        <label>Waiting Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waive_on_Initial_Enrollment__c</fullName>
        <label>Waive on Initial Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiving_Not_Covered_ElseWhere__c</fullName>
        <label>Waiving Not Covered ElseWhere</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>attachment_count__c</fullName>
        <description>Attachment count is updated by the attachment trigger to indicate whether new attachment file is attached.</description>
        <label>attachment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dental_Request_Only_Quote_Request_Summary</fullName>
        <filterScope>Queue</filterScope>
        <label>Dental Request Only (No Medical)</label>
        <queue>Dental_Request_Only</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Underwriting_25_000_Exchange_Only_RFP_Quote_Request_Summary</fullName>
        <filterScope>Queue</filterScope>
        <label>Underwriting:25,000+ &amp; Exchange Only RFP</label>
        <queue>Underwriting_25_000_Exchange_Only_RFP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Underwriting_5_000_25_000_Quote_Request_Summary</fullName>
        <filterScope>Queue</filterScope>
        <label>Underwriting: 5,000 – 25,000</label>
        <queue>Underwriting_5_000_25_000</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Underwriting_IL_LG_151_5_000_Quote_Request_Summary</fullName>
        <filterScope>Queue</filterScope>
        <label>Underwriting: IL LG 151 - 5,000</label>
        <queue>Underwriting_IL_LG_151_5_000</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Underwriting_IL_NA_151_5_000_Quote_Request_Summary</fullName>
        <filterScope>Queue</filterScope>
        <label>Underwriting: IL NA 151 - 5,000</label>
        <queue>Underwriting_IL_NA_151_5_000</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Quote Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Requests</pluralLabel>
    <recordTypes>
        <fullName>New_Sale</fullName>
        <active>true</active>
        <label>New Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Sale_UW</fullName>
        <active>false</active>
        <description>NOT InUsed</description>
        <label>New Sale UW</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Dental_Underwriting_Member__c</fullName>
        <label>Dental Underwriting Member</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Team_Member__c</fullName>
        <label>Opportunity Team Member</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Underwriting_Member__c</fullName>
        <label>Underwriting Member</label>
    </sharingReasons>
    <validationRules>
        <fullName>Declined_to_Quote_Reason</fullName>
        <active>true</active>
        <description>Validate that when Declined to Quote is the Status, the Declined to Quote Reason is populated.</description>
        <errorConditionFormula>OR(
AND(ISPICKVAL(Status__c, &apos;Declined to Quote&apos;),ISBLANK(Declined_to_Quote_Reason__c))
,
AND(
NOT(ISBLANK(Declined_to_Quote_Reason__c)),
TEXT(Status__c) &lt;&gt; &apos;Declined to Quote&apos;)
)</errorConditionFormula>
        <errorMessage>Declined to Quote Reason must be populated with and only with Declined to Quote status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Declined_to_Quote_from_New</fullName>
        <active>true</active>
        <description>Verifies that when changing status to Declined to Quote, the previous status was New.</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c), 
TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;New&apos;,
ISPICKVAL(Status__c, &apos;Declined to Quote&apos;))</errorConditionFormula>
        <errorMessage>Decline to Quote can only be selected when previous status was New.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Fields_when_Status_Sold_or_Closed</fullName>
        <active>true</active>
        <description>This validation rule locks fields when status is sold or closed on  all QR</description>
        <errorConditionFormula>OR 
( 
AND (NOT($Profile.Name = &quot;System Administrator&quot;), 
ISPICKVAL(PRIORVALUE(Status__c),&quot;Sold&quot;), 
ISPICKVAL(PRIORVALUE(QuoteToQRStatus__c),&quot;Sold&quot;)), 

AND (NOT($Profile.Name = &quot;System Administrator&quot;), 
ISPICKVAL(PRIORVALUE(Status__c),&quot;Closed&quot;), 
ISPICKVAL(PRIORVALUE(QuoteToQRStatus__c),&quot;Sold&quot;)) 
)</errorConditionFormula>
        <errorMessage>Fields are locked and cannot be updated once Status is Closed or Sold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Underwriter_Can_change_Underwriter</fullName>
        <active>false</active>
        <description>not valid anymore as uw is no more owner</description>
        <errorConditionFormula>AND (ISCHANGED( OwnerId ),!ISNEW(), $Profile.Name!=&apos;Underwriting&apos;, NOT(ISPICKVAL(Status__c, &apos;Declined to Quote&apos;)))</errorConditionFormula>
        <errorMessage>Only Underwriter can change underwriter name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_from_Receiveid_Final</fullName>
        <active>true</active>
        <description>Verifies that when changing status to Sold, the status was Sold</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c), 
TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;Received Final&apos;, 
ISPICKVAL(Status__c, &apos;Sold&apos;))</errorConditionFormula>
        <errorMessage>Sold can only be selected when previous status was Received Final.</errorMessage>
    </validationRules>
</CustomObject>